fix z-index issue with land elements

--- a/application/stylus/organisms/land.styl
+++ b/application/stylus/organisms/land.styl
@@ -35,6 +35,11 @@ popsSize= 420px
 .app #land .links,
 .app #land .headlines
   z-index: 2
+.auth #pops,
+.auth #clerkFlat,
+.auth #land .links,
+.auth #land .headlines
+  hasTransition: durationAlt*2
 
 //  POPS
 #pops
